--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Management</title>
 </head>
 
 <body>
