--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
 
         <!--Main SEO box with image-->
         <section class="search-engine-optimization">
+            <div id="search-engine-optimization">
             <img src="search-engine-optimization.jpg" alt="Notebook,laptop and magnifying glass representing an online, or SEO, search" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
+            </div>
         </section>
 
         <!--Online Reputation box with image-->
